# Pause-ture

./: README.md  index.html  package-lock.json  package.json  reminder.html  settings.html  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  quips.ts  reminder.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  guard.rs  lib.rs  main.rs  popup.rs  scheduler.rs  settings.rs  stats.rs
