[package]
name = "pause-ture"
version = "0.1.0"
description = "Break reminder app for Windows — walk, hydrate, unslouch, rest eyes"
authors = ["ashik-dignizant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pause_ture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
user-idle = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell"] }
winreg = "0.55"

